--- a/WooCommerce/Resources/en.lproj/Localizable.strings
+++ b/WooCommerce/Resources/en.lproj/Localizable.strings
@@ -71,6 +71,9 @@
 /* Application Logs navigation bar title - this screen is where users view the list of application logs available to them. */
 "Application Logs" = "Application Logs";
 
+/* Change order status screen - button title to apply selection */
+"Apply" = "Apply";
+
 /* Approve a comment */
 "Approve" = "Approve";
 
@@ -120,11 +123,8 @@
 "Can Not Request Link" = "Can Not Request Link";
 
 /* Button title. Tapping it cancels the login flow.
-   Cancel button label - Cancel prompt for user information. */
+   Cancel button label - Cancel prompt for user information. - Change order status screen - button title for closing the view */
 "Cancel" = "Cancel";
-
-/* Cancelled Order Status */
-"Canceled" = "Canceled";
 
 /* shown in promotional screens during first launch */
 "Catch up with your favorite sites and join the conversation anywhere, any time." = "Catch up with your favorite sites and join the conversation anywhere, any time.";
@@ -132,14 +132,8 @@
 /* Popup title for wrong SSL certificate. */
 "Certificate error" = "Certificate error";
 
-/* Deletes all activity logs except for the marked 'Current'. */
-"Clear old activity logs" = "Clear old activity logs";
-
 /* Settings > Privacy Settings > collect info section. Label for the `Collect Information` toggle. */
 "Collect Information" = "Collect Information";
-
-/* Completed Order Status */
-"Completed" = "Completed";
 
 /* Shown while the app waits for the site creation process to complete. */
 "Completing Signup" = "Completing Signup";
@@ -286,9 +280,6 @@
 /* Site Address placeholder */
 "example.wordpress.com" = "example.wordpress.com";
 
-/* Failed Order Status */
-"Failed" = "Failed";
-
 /* Error message to show when wrong URL format is used to access the REST API */
 "Failed to serialize request to the REST API." = "Failed to serialize request to the REST API.";
 
@@ -426,11 +417,9 @@
 /* Sign in instructions on the 'log in using email' screen. */
 "Log in with your WordPress.com account email address to manage your WooCommerce stores." = "Log in with your WordPress.com account email address to manage your WooCommerce stores.";
 
-/* Alert button title - confirms and logs out the user */
+/* Alert button title - confirms and logs out the user
+   Log out button title */
 "Log Out" = "Log Out";
-
-/* Log out button title */
-"Log out account" = "Log out account";
 
 /* Title of a button.  */
 "Lost your password?" = "Lost your password?";
@@ -509,8 +498,8 @@
 /* Default text for Top Performers section when no data exists for a given period. */
 "No activity this period" = "No activity this period";
 
-/* Fulfill order > customer info > where the physical shipping address would normally display.
-   Order details > customer info > billing details. This is where the address would normally display. - Order details > customer info > shipping details. This is where the address would normally display. */
+/* Order details > customer info > billing details. This is where the address would normally display.
+   Order details > customer info > shipping details. This is where the address would normally display. */
 "No address specified." = "No address specified.";
 
 /* Text displayed when no data is available for revenue chart. */
@@ -525,6 +514,9 @@
 /* Notifications List (Empty State + Filters)
    Orders List (Empty State + Filters) */
 "No results for the selected criteria" = "No results for the selected criteria";
+
+/* Order details > tracking.  This is where the shipping date would normally display. */
+"Not shipped yet" = "Not shipped yet";
 
 /* Notification status description for 'unspam' (opposite of spam) */
 "not spam" = "not spam";
@@ -562,9 +554,6 @@
 /* Spoken label to indicate switch control is turned on */
 "On" = "On";
 
-/* On Hold Order Status */
-"On Hold" = "On Hold";
-
 /* Opens iOS's Device Settings for the app */
 "Open Device Settings" = "Open Device Settings";
 
@@ -573,6 +562,9 @@
 
 /* Navigates to open source licenses screen */
 "Open Source Licenses" = "Open Source Licenses";
+
+/* Accessibility hint for the button to update the order status */
+"Opens a list of available statuses." = "Opens a list of available statuses.";
 
 /* No comment provided by engineer. */
 "Optional Tracking Information" = "Optional Tracking Information";
@@ -589,6 +581,12 @@
 
 /* Order notes section title */
 "Order Notes" = "Order Notes";
+
+/* Change order status screen - Screen title */
+"Order Status" = "Order Status";
+
+/* Order status update success notice */
+"Order status updated" = "Order status updated";
 
 /* Name of the Orders filter on the Notifications screen - it means only order notifications will be displayed. Plural form of the word Order.
    Orders stat label on dashboard - should be plural. - Title of the Orders tab — plural form of Order - Title that appears on top of the Order List screen when there is no filter applied to the list (plural form of the word Order). */
@@ -609,9 +607,6 @@
 
 /* Payment of <currency symbol><payment total> received via (payment method title) */
 "Payment of \(totalValue) received via \(order.paymentMethodTitle)" = "Payment of \(totalValue) received via \(order.paymentMethodTitle)";
-
-/* Pending Order Status */
-"Pending" = "Pending";
 
 /* Accessibility label that lets the user know the data is a phone number before speaking the phone number. */
 "Phone number: %@" = "Phone number: %@";
@@ -657,9 +652,6 @@
    Spoken accessibility label for an icon image that indicates it's a private note and is not seen by the customer. */
 "Private note" = "Private note";
 
-/* Processing Order Status */
-"Processing" = "Processing";
-
 /* Description for Top Performers left column header
    Product section title - Section header title for the product */
 "Product" = "Product";
@@ -686,9 +678,6 @@
 /* Settings > Privacy Settings > privacy policy info section. A text link to the privacy policy. */
 "Read privacy policy" = "Read privacy policy";
 
-/* Refunded Order Status */
-"Refunded" = "Refunded";
-
 /* Describes a domain that was registered with WordPress.com */
 "Registered Domain" = "Registered Domain";
 
@@ -698,6 +687,9 @@
 
 /* Settings > Privacy Settings > report crashes section. Label for the `Report Crashes` toggle. */
 "Report Crashes" = "Report Crashes";
+
+/* Deletes all activity logs except for the marked 'Current'. */
+"Reset Activity Log" = "Reset Activity Log";
 
 /* VoiceOver accessibility hint, informing the user the button can be used to search orders. */
 "Retrieves a list of orders that contain a given keyword." = "Retrieves a list of orders that contain a given keyword.";
@@ -724,6 +716,9 @@
 /* Search Orders */
 "Search orders" = "Search orders";
 
+/* Page title for the select a different store screen */
+"Select Store" = "Select Store";
+
 /* My Store > Settings > Selected Store information section. This is the heading listed above the information row that displays the store website and their username. */
 "Selected Store" = "Selected Store";
 
@@ -742,6 +737,13 @@
 
 /* Action: Opens the Store in a browser */
 "Share your Store" = "Share your Store";
+
+/* Accessibility label for Shipment tracking company in Order details screen. Reads like: Shipment Company USPS */
+"Shipment Company %@" = "Shipment Company %@";
+
+/* Accessibility label for Shipment date in Order details screen. Shipped: February 27, 2018.
+   Date an item was shipped */
+"Shipped %@" = "Shipped %@";
 
 /* Shipping label for payment view */
 "Shipping" = "Shipping";
@@ -847,6 +849,9 @@
 
 /* This action allows the user to change stores without logging out and logging back in again. */
 "Switch Store" = "Switch Store";
+
+/* Message presented after users switch to a new store. Reads like: Switched to {store name}. You will only receive notifications from this store. */
+"Switched to \(newStoreName). You will only receive notifications from this store." = "Switched to \(newStoreName). You will only receive notifications from this store.";
 
 /* Labels an order note to let user know it's a system status message */
 "System status" = "System status";
@@ -966,6 +971,18 @@
 /* Description for Top Performers right column header */
 "Total Spend" = "Total Spend";
 
+/* Track package button title */
+"Track package" = "Track package";
+
+/* Order tracking section title */
+"Tracking" = "Tracking";
+
+/* Accessibility label for Shipment tracking number in Order details screen. Reads like: Tracking Number 1AZ234567890 */
+"Tracking number %@" = "Tracking number %@";
+
+/* Accessibility hint for Track Package button in Order details screen */
+"Tracks a shipment." = "Tracks a shipment.";
+
 /* Move a comment to the trash */
 "Trash" = "Trash";
 
@@ -986,6 +1003,9 @@
 
 /* Content of error presented when Add Note Action Failed. It reads: Unable to add note to order #{order number} */
 "Unable to add note to order #\(viewModel.order.orderID)" = "Unable to add note to order #\(viewModel.order.orderID)";
+
+/* Content of error presented when updating the status of an Order fails. It reads: Unable to change status of order #{order number} */
+"Unable to change status of order #\(orderID)" = "Unable to change status of order #\(orderID)";
 
 /* Shown when a user logs in with Google but it subsequently fails to work as login to WordPress.com */
 "Unable To Connect" = "Unable To Connect";
@@ -1037,6 +1057,9 @@
 
 /* Footer text below the list of logs explaining the maximum number of logs saved. */
 "Up to seven days՚ worth of logs are saved." = "Up to seven days՚ worth of logs are saved.";
+
+/* Accessibility label for the button to update the order status in Order Details */
+"Update Order Status" = "Update Order Status";
 
 /* Order updated summary date. It reads: Updated {medium formatted date} at {short style time} */
 "Updated %@ at %@" = "Updated %1$@ at %2$@";
