--- a/WooCommerce/Resources/AppStoreStrings.pot
+++ b/WooCommerce/Resources/AppStoreStrings.pot
@@ -32,7 +32,7 @@ msgid ""
 "\n"
 "WooCommerce is the most customizable eCommerce platform for building your online business. Built on WordPress, it is integrated with the world’s best content management tools. From coffee subscriptions to Spanish lessons to gym memberships to complex enterprise-level eCommerce – visit WooCommerce.com/start to launch a new store and ship your idea.\n"
 "\n"
-"Requirements: WooCommerce v3.5+, the Jetpack plugin."
+"Requirements: WooCommerce v3.5+, the Jetpack plugin.\n"
 msgstr ""
 
 #. translators: Keywords used in the App Store search engine to find the app.
@@ -47,11 +47,12 @@ msgctxt "app_store_promo_text"
 msgid "Run your store wherever you are. The WooCommerce app makes it easy to manage orders and inventory, track sales, and monitor store activity like new orders and reviews."
 msgstr ""
 
-msgctxt "v1.3-whats-new"
+msgctxt "v1.4-whats-new"
 msgid ""
-"- Manage more than one store? You can switch sites without logging in and out: head to Settings and tap on Switch Store. The name of the active store displays on the “My Store” tab.\n"
-"- When adding a note or fulfilling an order fails, the message box now shows a “Retry” option so you can give it another go.\n"
-"- You don’t only take payments in round numbers, so orders can now have decimal quantities.\n"
+"- Visit the Order Details screen to manually change an order’s status or view shipment tracking.\n"
+"- We now fully support and properly display custom order status labels.\n"
+"- You can now filter by custom order status.\n"
+"- RTL language support has been improved, with better handling of graphical component flipping.\n"
 msgstr ""
 
 #. translators: This is a promo message that will be attached on top of a screenshot in the App Store.
@@ -59,7 +60,7 @@ msgstr ""
 msgctxt "app_store_screenshot-1"
 msgid ""
 "Your Store\n"
-"in Your Pocket"
+"in Your Pocket\n"
 msgstr ""
 
 #. translators: This is a promo message that will be attached on top of a screenshot in the App Store.
@@ -67,7 +68,7 @@ msgstr ""
 msgctxt "app_store_screenshot-1_b"
 msgid ""
 "Made with\n"
-"at Automattic"
+"at Automattic\n"
 msgstr ""
 
 #. translators: This is a promo message that will be attached on top of a screenshot in the App Store.
@@ -93,7 +94,7 @@ msgstr ""
 msgctxt "app_store_screenshot-5"
 msgid ""
 "Scroll through, filter,\n"
-"or look up specific orders"
+"or look up specific orders\n"
 msgstr ""
 
 #. translators: This is a promo message that will be attached on top of a screenshot in the App Store.
@@ -101,7 +102,7 @@ msgstr ""
 msgctxt "app_store_screenshot-6"
 msgid ""
 "View store data by week,\n"
-"month, and year"
+"month, and year\n"
 msgstr ""
 
 #. translators: This is a promo message that will be attached on top of a screenshot in the App Store.
@@ -109,7 +110,7 @@ msgstr ""
 msgctxt "app_store_screenshot-7"
 msgid ""
 "Check which products are\n"
-"performing best"
+"performing best\n"
 msgstr ""
 
 #. translators: This is a promo message that will be attached on top of a screenshot in the App Store.
@@ -117,6 +118,6 @@ msgstr ""
 msgctxt "app_store_screenshot-8"
 msgid ""
 "Get notified about new\n"
-"customer reviews"
+"customer reviews\n"
 msgstr ""
 
