--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,5 +1,6 @@
 1.5
 -----
+- bugfix: order status refreshes upon pull-to-refresh in Order Details
 - improvement: change top performers text from "Total Product Order" to "Total orders" for clarity
 
 1.4
