--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,5 +1,6 @@
 1.5
 -----
+- bugfix: payment status label background color showing up beyond rounded border
 - improvement: change top performers text from "Total Product Order" to "Total orders" for clarity
 
 1.4
