--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -2,6 +2,7 @@
 -----
 - update: this app supports iOS 12.0 and up.
 - improvement: improved support for large text sizes.
+- bugfix: fixes Order List not loading for some users.
  
 1.7
 -----
