--- a/WooCommerce/Resources/release_notes.txt
+++ b/WooCommerce/Resources/release_notes.txt
@@ -1,3 +1,3 @@
-- Improved support for large text sizes.
-- Fixed a bug where Order List did not load for some users.
-- Updated the app to support iOS 12.0 and up.
+* Support for large text sizes has been improved.
+* Fixed a bug where Order List did not load for some users.
+* Updated the app to support iOS 12.0 and up.
