Add release notes for 1.8.1

--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,5 +1,9 @@
 1.9
 -----
+
+1.8.1
+-----
+- bugfix: fixes "Unable to load content" error message when attempting to get Top Performers content.
  
 1.8
 -----
