--- a/WooCommerce/Resources/release_notes.txt
+++ b/WooCommerce/Resources/release_notes.txt
@@ -1,1 +1,4 @@
-We’ve rearranged some parts of Order Details for better readability and usability: Customer payment details are more prominent, and Order Notes are grouped with date headings for easier scanning. And no more awkward expanding animation when you view the Billing Details!
+* New! You can now preselect the current Order status when editing a list of order statuses.
+* Improved! The "9+" badge on the Orders tab got a makeover. It no longer overlaps the tab label on iPhone SE/8 in landscape mode.
+* Improved! The Top Performers list on the new stats page no longer has a dark header bar in Dark mode.
+* Improved! On the Orders tab, the order status filter now sticks after changing an Order status.
